--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -1,41 +1,19 @@
-<!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Spectral by HTML5 UP</title>
-		<meta charset="utf-8" />
-		
-	    <!--[start] DON'T FIDDLE -->
-	    <meta name="format-detection" content="telephone=no" />
-	    <meta name="msapplication-tap-highlight" content="no" />
-	    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-	    <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
-	    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-	    <!-- Good default declaration:
-	    * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-	    * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-	    * Disables use of eval() and inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-	        * Enable inline JS: add 'unsafe-inline' to default-src
-	        * Enable eval(): add 'unsafe-eval' to default-src
-	    * Create your own at http://cspisawesome.com
-	    -->
-	    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
-	    <!-- [end] DON'T FIDDLE -->
-
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		
-		
-		
-		
-    <script type="text/javascript" charset="utf-8">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<title>My App</title>
+ 
+<link rel="stylesheet" href="css/framework7.ios.min.css">
+<link rel="stylesheet" href="css/framework7.ios.colors.min.css">
+ 
+<link rel="stylesheet" href="css/my-app.css">
+	
+	
+<script type="text/javascript" charset="utf-8">
     var pictureSource;   // picture source
     var destinationType; // sets the format of returned value 
     // Wait for PhoneGap to connect with the device
@@ -162,174 +140,246 @@
     }
     
     
-    </script>		
-		
-	</head>
-	<body class="landing">
+    </script>	
+	
+	
+	
+</head>
+<body>
+ 
+<div class="statusbar-overlay"></div>
+ 
+<div class="panel-overlay"></div>
+ 
+<div class="panel panel-left panel-reveal">
+<div class="content-block">
+<p>Left panel content goes here</p>
+</div>
+</div>
+ 
+<div class="panel panel-right panel-cover">
+<div class="content-block">
+<p>Right panel content goes here</p>
+</div>
+</div>
+ 
+ 
+<div class="views tabs toolbar-through">
+ 
+<div id="view-1" class="view view-main tab active">
+ 
+<div class="pages">
+ 
+<div data-page="index-1" class="page">
+ 
+<div class="page-content">
+<div class="content-block-title">Welcome</div>
+<div class="content-block">
+	
+	<h2>PhoneGap Test<br />
+	cordova-plugin-camera</h2>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
-						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>PhoneGap Test<br />
-								cordova-plugin-camera</h2>
-
-								<button onclick="capturePhotoWithData();">Capture With Image Data</button> <br>
-								<button onclick="capturePhotoWithFile();">Capture With Image File URI</button> <br>
-								<button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">Select From Library</button><br>
-								<button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">Select From Album</button><br>
-								<img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
-								<img style="display:none;width:100%"; id="largeImage" src="" />
-
-							</header>
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-    <!--[start] DON'T FIDDLE -->
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript">
-        app.initialize();
-    </script>
-    <!--[end] DON'T FIDDLE -->
-	</body>
+	<button onclick="capturePhotoWithData();">Capture With Image Data</button> <br>
+	<button onclick="capturePhotoWithFile();">Capture With Image File URI</button> <br>
+	<button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">Select From Library</button><br>
+	<button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">Select From Album</button><br>
+	<img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+	<img style="display:none;width:100%"; id="largeImage" src="" />
+	
+	
+	
+<p>This is an example of tab bar application layout. The main point of such tabbed layout is that each tab contains independent view with its own routing and navigation.</p>
+<p>Each tab/view may have different layout, different navbar type (dynamic, fixed or static) or without navbar like this tab.</p>
+<p>And of course, your favorite panels are still here: <a href="#" class="open-panel">left</a> and <a href="#" data-panel="right" class="open-panel">right</a></p>
+<p>Icons and their labels in tab bar below are just for example and don't related to their content.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+ 
+<div id="view-2" class="view tab">
+ 
+<div class="navbar">
+<div class="navbar-inner">
+<div class="center sliding">Second View</div>
+</div>
+</div>
+<div class="pages navbar-through">
+<div data-page="index-2" class="page">
+<div class="page-content">
+<div class="content-block">
+<p>This is a second view. Lets, for example, have here some internal pages with navbar navigation</p>
+</div>
+<div class="list-block">
+<ul>
+<li><a href="about.html" class="item-link">
+<div class="item-content">
+<div class="item-inner">
+<div class="item-title">About Us</div>
+</div>
+</div></a></li>
+<li><a href="services.html" class="item-link">
+<div class="item-content">
+<div class="item-inner">
+<div class="item-title">Services</div>
+</div>
+</div></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="view-3" class="view tab">
+<div class="pages">
+<div data-page="index-3" class="page">
+<div class="page-content">
+<div class="content-block-title">Another plain static view</div>
+<div class="content-block">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel commodo massa, eu adipiscing mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus ultricies dictum neque, non varius tortor fermentum at. Curabitur auctor cursus imperdiet. Nam molestie nisi nec est lacinia volutpat in a purus. Maecenas consectetur condimentum viverra. Donec ultricies nec sem vel condimentum. Phasellus eu tincidunt enim, sit amet convallis orci. Vestibulum quis fringilla dolor. </p>
+<p>Mauris commodo lacus at nisl lacinia, nec facilisis erat rhoncus. Sed eget pharetra nunc. Aenean vitae vehicula massa, sed sagittis ante. Quisque luctus nec velit dictum convallis. Nulla facilisi. Ut sed erat nisi. Donec non dolor massa. Mauris malesuada dolor velit, in suscipit leo consectetur vitae. Duis tempus ligula non eros pretium condimentum. Cras sed dolor odio.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel commodo massa, eu adipiscing mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus ultricies dictum neque, non varius tortor fermentum at. Curabitur auctor cursus imperdiet. Nam molestie nisi nec est lacinia volutpat in a purus. Maecenas consectetur condimentum viverra. Donec ultricies nec sem vel condimentum. Phasellus eu tincidunt enim, sit amet convallis orci. Vestibulum quis fringilla dolor. </p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="view-4" class="view tab">
+<div class="pages navbar-fixed">
+<div data-page="index-4" class="page">
+<div class="navbar">
+<div class="navbar-inner">
+<div class="center">Settings</div>
+</div>
+</div>
+<div class="page-content">
+<div class="list-block">
+<ul>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-name"></i></div>
+<div class="item-inner">
+<div class="item-title label">Name</div>
+<div class="item-input">
+<input type="text" placeholder="Your name">
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-email"></i></div>
+<div class="item-inner">
+<div class="item-title label">E-mail</div>
+<div class="item-input">
+<input type="email" placeholder="E-mail">
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-url"></i></div>
+<div class="item-inner">
+<div class="item-title label">URL</div>
+<div class="item-input">
+<input type="url" placeholder="URL">
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-password"></i></div>
+<div class="item-inner">
+<div class="item-title label">Password</div>
+<div class="item-input">
+<input type="password" placeholder="Password">
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-tel"></i></div>
+<div class="item-inner">
+<div class="item-title label">Phone</div>
+<div class="item-input">
+<input type="tel" placeholder="Phone">
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-gender"></i></div>
+<div class="item-inner">
+<div class="item-title label">Gender</div>
+<div class="item-input">
+<select>
+<option>Male</option>
+<option>Female</option>
+</select>
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-calendar"></i></div>
+<div class="item-inner">
+<div class="item-title label">Birth date</div>
+<div class="item-input">
+<input type="date" placeholder="Birth day" value="2014-04-30">
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-toggle"></i></div>
+<div class="item-inner">
+<div class="item-title label">Switch</div>
+<div class="item-input">
+<label class="label-switch">
+<input type="checkbox">
+<div class="checkbox"></div>
+</label>
+</div>
+</div>
+</div>
+</li>
+<li>
+<div class="item-content">
+<div class="item-media"><i class="icon icon-form-settings"></i></div>
+<div class="item-inner">
+<div class="item-title label">Slider</div>
+<div class="item-input">
+<div class="range-slider">
+<input type="range" min="0" max="100" value="50" step="0.1">
+</div>
+</div>
+</div>
+</div>
+</li>
+</ul>
+</div>
+<div class="content-block">
+<p>Mauris commodo lacus at nisl lacinia, nec facilisis erat rhoncus. Sed eget pharetra nunc. Aenean vitae vehicula massa, sed sagittis ante. Quisque luctus nec velit dictum convallis. Nulla facilisi. Ut sed erat nisi. Donec non dolor massa. Mauris malesuada dolor velit, in suscipit leo consectetur vitae. Duis tempus ligula non eros pretium condimentum. Cras sed dolor odio.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+ 
+<div class="toolbar tabbar tabbar-labels">
+<div class="toolbar-inner"><a href="#view-1" class="tab-link active"> <i class="icon tabbar-demo-icon-1"></i><span class="tabbar-label">Information</span></a><a href="#view-2" class="tab-link"><i class="icon tabbar-demo-icon-2"></i><span class="tabbar-label">Inbox</span></a><a href="#view-3" class="tab-link"> <i class="icon tabbar-demo-icon-3"><span class="badge bg-red">4</span></i><span class="tabbar-label">Upload</span></a><a href="#view-4" class="tab-link"> <i class="icon tabbar-demo-icon-4"></i><span class="tabbar-label">Photos</span></a></div>
+</div>
+</div>
+ 
+<script type="text/javascript" src="js/framework7.min.js"></script>
+ 
+<script type="text/javascript" src="js/my-app.js"></script>
+</body>
 </html>
